<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">


    <TextView
        android:id="@+id/textView2"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:hint="Editar tarea"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textousuario"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:hint="Escriba su tarea.."
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/fechausuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <DatePicker
        android:id="@+id/fechausuario"
        android:layout_width="wrap_content"
        android:layout_height="312dp"
        android:layout_margin="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436" />

    <Button
        android:id="@+id/aceptar"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="171dp"
        android:layout_height="51dp"
        android:layout_margin="20sp"
        android:backgroundTint="@color/purple2"
        android:hint="Guardar"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancelar"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.901" />

    <Button
        android:id="@+id/cancelar"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="163dp"
        android:layout_height="53dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/purple2"
        android:hint="Cancelar"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.877" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="305dp"
        android:layout_height="28dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fechausuario" />



</androidx.constraintlayout.widget.ConstraintLayout>