<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/firstFragment"
        android:icon="@android:drawable/ic_menu_add"
        android:title="Nuevo"/>

    <item
        android:id="@+id/secondFragment"
        android:icon="@android:drawable/ic_menu_view"
        android:title="Mostrar"/>

    <item
        android:id="@+id/thirdFragment"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="Editar"/>
</menu>